# community-manager

./: .gitignore  README.md  pyproject.toml  verdicts.md
docs/: Dockerfile.review  cli-reference.md  contributing.md  sandbox-review.md  using-the-cli.md
src/community_manager/: __init__.py  cli.py  fetcher.py  issue.py  issue_state.py
src/community_manager/notifications/: __init__.py  linux_notifier.py  macos_notifier.py  null_notifier.py  protocol.py  windows_notifier.py
src/community_manager/sandbox/: __init__.py  docker_provider.py  image_cache.py  protocol.py  qemu_provider.py  reviewer.py
tests/: conftest.py
tests/cassettes/: fetch_open_issue.yaml
tests/community_manager/: test_cli.py  test_fetcher.py  test_image_cache.py  test_issue.py  test_issue_state.py  test_main.py  test_notifications.py  test_sandbox.py
