[project]
name = "community-manager"
version = "0.1.0"
description = "making community managers li managersfe easy :)"
readme = "README.md"
authors = [
    { name = "Glauber Brennon", email = "glauberbrennon@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
communiy-manager = "community_manager:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
